@@ -1,3 +1,9 @@
+2001-05-17  Bruno Haible  <haible@clisp.cons.org>
+
+	* gettext.m4 (AM_WITH_NLS): Fix dcgettext test. Always add $LIBICONV
+	when using -lintl, because libintl may be a static library depending
+	on a (static or shared) libiconv.
+
 2001-05-12  Paul Eggert  <eggert@twinsun.com>
 
 	* gettext.m4 (AM_GNU_GETTEXT): Add check for strtoul.
